# advent_of_code_2022

./: .clang-format  CMakeLists.txt  main.cpp  read_utils.h  solution1.cpp  solution2.cpp  solution3.cpp  solutions.h
solutions/: solution1.cpp  solution2.cpp  solution2.h  solution3.cpp  solution3.h  solution4.cpp  solution4.h  solution5.cpp  solution6.cpp  solution7.cpp  solution7.h  solution8.cpp  solution8.h  solutions.cpp  solutions.h
utils/: functional.h  read.cpp  read.h  read_utils.cpp  read_utils.h
